# dcool

./: CMakeLists.txt  README.md
document/: dependency_bugs.md  overview.md
document/concurrency/: atom.md  mutex.md
document/container/: linked.md  list.md
document/core/: aligned_storage.md  integer.md  raw_pointer_getter.md  storage_requirement.md  types.md
document/resource/: array_pool.md  pool.md  pool_adaptor.md  pool_overview.md
document/service/: once_invoker.md  sealer.md
document/utility/: any.md  any_mutex.md  function.md  overloaded_function.md
document/vigor/: sealer.md
example/container/: linked.cpp  list.cpp
example/core/: linked.cpp
example/resource/: shared.cpp
example/vigor/: sealer.cpp
include/dcool/: algorithm.hpp  basic.h  basic.hpp  binary.hpp  concurrency.h  concurrency.hpp  config.h  config.hpp  console.hpp  container.hpp  core.h  core.hpp  coroutine.hpp  memory.hpp  resource.hpp  service.hpp  test.hpp  utility.hpp  version.h  version.hpp  vigor.hpp
include/dcool/algorithm/: for_each.hpp
include/dcool/binary/: bin.hpp  bin_view.hpp  endian.hpp
include/dcool/concurrency/: atom.hpp  atom_basic.hpp  atomic_flag.hpp  basic.hpp  latch.hpp  mutex.h  mutex.hpp  semaphore.hpp  thead_basic.h  thread.h  thread_pool.hpp
include/dcool/console/: basic.hpp  control.hpp  sgr.hpp
include/dcool/container/: basic.hpp  indexable_iterator.hpp  linked.hpp  list.hpp  map.hpp  standard_queue.hpp  string.hpp
include/dcool/core/: alignment.hpp  basic.h  basic.hpp  compare.hpp  concept.hpp  concrete_pool.hpp  contamination.hpp  converter.hpp  counter.hpp  debug.hpp  dereference.hpp  destruct.hpp  exception.hpp  execution.hpp  folded_pointer.hpp  functional.hpp  hash.hpp  integer.hpp  iteration.hpp  layout.hpp  linked.hpp  list.hpp  member_detector.hpp  memory.hpp  min.hpp  min_max.hpp  mutex.hpp  node.hpp  optional.hpp  pool.hpp  preprocessor.h  preprocessor.hpp  range.hpp  range_operation.hpp  raw_pointer_operation.hpp  relay.hpp  replicator.hpp  reverse_iterator.hpp  select.hpp  span.hpp  (+15 more)
include/dcool/coroutine/: actual_awaiter.hpp  async_mutex.hpp  basic.hpp  generator.hpp  sync_wait.hpp  task.hpp
include/dcool/memory/: concrete_pool.hpp  pool.hpp
include/dcool/resource/: concrete_pool.hpp  dismissor.hpp  fast_pool.hpp  free_list.hpp  pool.hpp  shared.hpp  squeezing.hpp  unique_pointer.hpp
include/dcool/service/: once_invoker.hpp  sealer.hpp  spsc_stack.hpp  timer.hpp
include/dcool/test/: basic.hpp  case.hpp  center.hpp  check.hpp  registeration.hpp  suite.hpp  traceable_tag.hpp
include/dcool/utility/: any.hpp  any_mutex.hpp  basic.hpp  cow.hpp  eraser.hpp  function.hpp  overloaded_function.hpp
include/dcool/vigor/: fast_sealer.hpp  sealer.hpp
source/: CMakeLists.txt
source/concurrency/: CMakeLists.txt  c_mutex.cpp  c_thread.cpp
source/core/: CMakeLists.txt  exportation.cppm
source/coroutine/: CMakeLists.txt  async_mutex.cpp
source/test/: CMakeLists.txt  case.cpp  center.cpp  suite.cpp
test/: CMakeLists.txt  test.cpp
test/concurrency/: atom.cpp  latch.cpp  mutex.cpp  semaphore.cpp  thread_pool.cpp
test/container/: linked.cpp  list.cpp  string.cpp
test/core/: integer.cpp  layout.cpp  storage.cpp
test/coroutine/: async_mutex.cpp  generator.cpp  task.cpp
test/resource/: shared.cpp
test/service/: once_invoker.cpp  sealer.cpp  timer.cpp
test/utility/: any.cpp  any_mutex.cpp  cow.cpp  function.cpp  overloaded_function.cpp
test/vigor/: sealer.cpp
